syntax = "proto3";
package mycel.registry;

option go_package = "github.com/mycel-domain/mycel/x/registry/types";

enum WalletRecordType {
  // BTC 0xxx
  BITCOIN_MAINNET = 0;
  BITCOIN_TESTNET = 1;

  // EVM 1xxxx
  ETHEREUM_MAINNET = 10000;
  ETHEREUM_GOERLI = 10001;
  ETHEREUM_SEPOLIA = 10002;
  POLYGON_MAINNET = 10003;
  POLYGON_MUMBAI = 10004;

  // MOVE 2xxxx
  APTOS_MAINNET = 20000;
  APTOS_TESTNET = 20001;
  SUI_MAINNET = 20002;
  SUI_TESTNET = 20003;

  // SOLANA 3xxxx
  SOLANA_MAINNET = 30000;
  SOLANA_TESTNET = 30001;
}

enum WalletAddressFormat {
  BITCOIN = 0;
  ETHEREUM = 1;
  MOVE = 2;
  SOLANA = 3;
}


